--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,8 @@ gunicorn==23.0.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
+pdf2image==1.17.1
+
 Mako==1.3.10
 MarkupSafe==3.0.2
 oauthlib==3.3.1
