--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ itsdangerous==2.2.0
 Jinja2==3.1.6
 pdf2image==1.17.0
 pillow==12.0.0
+psycopg2-binary==2.9.9
 Mako==1.3.10
 MarkupSafe==3.0.2
 oauthlib==3.3.1
