Added sitemap and other updates

--- a/render.yaml
+++ b/render.yaml
@@ -4,6 +4,7 @@ services:
     name: notessmasher
     env: python
     plan: free
+    pythonVersion: "3.11"
     buildCommand: bash render-build.sh
     startCommand: gunicorn app:app
     envVars:
