--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,7 @@ pdf2image==1.17.0
 pillow==12.0.0
 Mako==1.3.10
 psycopg==3.1.9
-
+python-docx==0.8.11
 MarkupSafe==3.0.2
 oauthlib==3.3.1
 packaging==25.0
