--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,8 @@ Mako==1.3.10
 psycopg==3.1.9
 python-docx==0.8.11
 MarkupSafe==3.0.2
+PyPDF2==3.0.1
+
 oauthlib==3.3.1
 packaging==25.0
 python-dotenv==1.1.1
