--- a/render.yaml
+++ b/render.yaml
@@ -6,7 +6,8 @@ services:
     plan: free
     pythonVersion: "3.11"
     buildCommand: bash render-build.sh
-    startCommand: gunicorn app:app
+    startCommand: |
+      flask db upgrade && gunicorn app:app
     envVars:
       - key: FLASK_ENV
         value: production
